--- a/Home/style1.css
+++ b/Home/style1.css
@@ -35,18 +35,32 @@ h1 {
 .group { zoom:1; /* For IE 6/7 */ }
 
 /*  GRID OF FOUR  */
-.span_4_of_4 {
-	width: 100%;
+
+    .span_4_of_4 {
+        width: 100%;
+    }
+    .span_3_of_4 {
+        width: 75%;
+    }
+    .span_2_of_4 {
+        width: 50%;
+    }
+    .span_1_of_4 {
+        width: 25%;
+    }
+
+    img { width:520px;}
+
+@media only screen and (max-width: 480px) {
+    .col {
+        display: none;
+        float:left;
+        margin: 1% 0 1% 0%;
+    }
+    img { width:320px;}
+
 }
-.span_3_of_4 {
-	width: 75%;
-}
-.span_2_of_4 {
-	width: 50%;
-}
-.span_1_of_4 {
-	width: 25%;
-}
+
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
